--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <dive class="logo">
         <a href="index.html">
-        <img src="logo.png" alt="Logo">
+        <img src="aikon.png" alt="Logo">
         </a>
       </div>
       <nav>
